[package]
name = "webhook_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "webhook_service"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
git2 = "0.19.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }