[package]
name = "webhook_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webhook_service_bin"
path = "src/main.rs"

[lib]
name = "webhook_service"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
git2 = "0.19.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde_yaml = "0.9"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
rpassword = "7.3"
aes = "0.8.3"
cipher = "0.4.4"
rand = "0.8.5"
tempfile = "3.10.1"
